Fix invite button being too small.

--- a/app/assets/stylesheets/partials/_shared_panel_login_signup_styles.sass
+++ b/app/assets/stylesheets/partials/_shared_panel_login_signup_styles.sass
@@ -32,8 +32,3 @@ $panel-border-radius: 8px
   font-weight: 600 //semibold
   text-transform: uppercase
   margin-bottom: 30px
-
-.btn.btn-warning
-  float: right
-  width: 100px
-  text-transform: uppercase
